RESOLVED FIXED65166
[Chromium][DRT] MockSpellCheck.cpp should be clang clean
https://bugs.webkit.org/show_bug.cgi?id=65166
Summary [Chromium][DRT] MockSpellCheck.cpp should be clang clean
Hajime Morrita
Reported 2011-07-25 23:10:22 PDT
Asan enabled build complains as following: third_party/WebKit/Tools/DumpRenderTree/chromium/MockSpellCheck.cpp:78:36: error: operands of ? are integers of different signs: 'unsigned int' and 'int' [-Werror,-Wsign-compare] int wordLength = wordEnd == -1 ? stringText.length() - wordOffset : wordEnd - wordOffset; ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ~~~~~~~~~~~~~~~~~~~~
Attachments
Patch (1.53 KB, patch)
2011-07-25 23:13 PDT, Hajime Morrita
no flags
Hajime Morrita
Comment 1 2011-07-25 23:13:38 PDT
Hajime Morrita
Comment 2 2011-07-25 23:15:28 PDT
Comment on attachment 101973 [details] Patch Kent-san, could you take a look at this one line change?
Kent Tamura
Comment 3 2011-07-25 23:16:46 PDT
Comment on attachment 101973 [details] Patch ok
WebKit Review Bot
Comment 4 2011-07-26 00:17:37 PDT
Comment on attachment 101973 [details] Patch Clearing flags on attachment: 101973 Committed r91745: <http://trac.webkit.org/changeset/91745>
WebKit Review Bot
Comment 5 2011-07-26 00:17:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.