[Chromium][DRT] MockSpellCheck.cpp should be clang clean https://bugs.webkit.org/show_bug.cgi?id=65166

Reviewed by Kent Tamura.

* DumpRenderTree/chromium/MockSpellCheck.cpp:
(MockSpellCheck::spellCheckWord): -Wsign-compare warning.


Canonical link: https://commits.webkit.org/80916@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91745 268f45cc-cd09-0410-ab3c-d52691b4dbfc